--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+        <figure>
+            <img class="banner" src="https://r8s2th.csb.app/imagens/background.png" alt="propaganda">
+        </figure>
+        <section>
+            <img src="https://r8s2th.csb.app/imagens/image%201.png" alt="comercial">
+            <div class="caixa1">
+                
+                <h2>Novo Elseve Glycolic Gloss</h2>
+                <p>Luta contra Cabelo poroso e sem brilho? Para ajudar a trazer todo o brilho para o seu cabelo, Elseve apresenta a nova linha Glycolic Gloss. Contando com um ativo já queridinho no universo de skincare – o ácido glicólico. ​É mais que brilho, é ultra gloss!</p>
+            </div>
+        </section>
+        <section>
+            <figure>
+                <img src="./image/shampoo.png" alt="">
+                <img src="./image/tinta.png" alt="">
+                <img src="./image/oleo.png" alt="">
+                <img src="./image/shampoo.png" alt="">
+            </figure>
+        </section>
+    </main>
 </body>
 </html>
